<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="result">Hasil Analisis</string>
    <string name="confidence_score">Confidence: %.2f%%</string>
    <string name="result_text">%1$s (Confidence: %2$.2f%%)</string>
    <string name="preview_image">preview image</string>
</resources>